Use queries_v2 in usermanagement, inject db dependency individually
