# backend/app/REST/connexion/authentication.py
@@ -9,7 +9,10 @@ def basic_auth(username: str, password: str, required_scopes=None):
     """
     # TODO: required_scopes is always None,
     #   despite following https://github.com/spec-first/connexion/issues/863
-    authenticated, role = backend.database.usermanagement.authenticate_user(user_name=username,
+    db_config = backend.database.queries_v2.get_database_config()
+    db = backend.database.queries_v2.create_session(db_config=db_config)
+    authenticated, role = backend.database.usermanagement.authenticate_user(db=db,
+                                                                            user_name=username,
                                                                             password=password)
     if not authenticated:
         return None
